--- a/css/styles.css
+++ b/css/styles.css
@@ -3,3 +3,13 @@
   background-size: cover;
   background-image: url(../img/backgrounds/landing.jpg);
 }
+.fastfoodimg {
+  padding-top: 25px;
+  padding-left: 50px
+  padding-right: 2px;
+  margin-left: 5%;
+}
+body {
+  margin: 20px;
+  font-size: 25px;
+}
