--- a/css/styles.css
+++ b/css/styles.css
@@ -17,4 +17,33 @@ body {
   background-image: url(../img/backgrounds/foodsBg.jpg);
   background-size: cover;
   text-align: center;
+  padding: 100px 0px
+}
+.section5 {
+  padding-left: 50px;
+  padding-right: 50px;
+}
+.section6 {
+  background-image: url("../img/backgrounds/subscribe.jpg");
+  background-size: cover;
+  padding-left: 350px;
+  padding-bottom: 200px;
+  padding-top: 50px;
+  color: white;
+}
+#subcribeButton {
+  background-color: blue;
+  display: inline-block;
+  
+}
+.section7 {
+  padding-top: 25px;
+  padding-left: 600px;
+  padding-right: 150px;
+  color: white;
+  background-color: red;
+}
+.inline {
+  float: left;
+  padding-left: 10px;
 }
