--- a/css/styles.css
+++ b/css/styles.css
@@ -13,16 +13,45 @@ body {
   margin: 20px;
   font-size: 25px;
 }
+/*section 4 stylings*/
 .section4 {
   background-image: url(../img/backgrounds/foodsBg.jpg);
   background-size: cover;
   text-align: center;
   padding: 100px 0px
 }
+.container {
+  padding: 25px;
+  background-color: white;
+  color: cyan;
+}
+/* section 5 stylings */
 .section5 {
   padding-left: 50px;
   padding-right: 50px;
 }
+#testimonialsRow {
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 40px;
+  padding-top: 40px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  text-align: center;
+  box-shadow: 0 0 10px grey;
+}
+#testimonialsRow h2{
+  color: cyan;
+  font-size:40px;
+  font-weight: 400;
+}
+#testimonialsColumn {
+  border-right: 2px solid grey;
+}
+#aboutMenu {
+  font-size: 70%;
+}
+ /*-section 6 styling--*/
 .section6 {
   background-image: url("../img/backgrounds/subscribe.jpg");
   background-size: cover;
@@ -34,7 +63,7 @@ body {
 #subcribeButton {
   background-color: blue;
   display: inline-block;
-  
+
 }
 .section7 {
   padding-top: 25px;
